--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ body {
     box-shadow: 0 0 25px 0;
 }
 
+.iconH1{
+    padding: 5px 0;
+    border-radius: 10px;
+}
+
 #titulo {
     color: rgb(253, 251, 251);
 }
