--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
 }
 
 body {
-    background-color: rgb(253, 251, 251);
-        font-family: 'Montserrat Alternates', sans-serif;
+    background-color: rgba(253, 251, 251, 0.795);
+    font-family: 'Montserrat Alternates', sans-serif;
+    margin: 200px 0 0 0;
 }
 
 #cabecalho {
@@ -15,20 +16,30 @@ body {
     width: 100%;
     z-index: 1;
     box-shadow: 0 0 25px 0;
+    display: inline-flex;
 }
 
 .iconH1{
-    padding: 5px 0;
+    padding: 5px;
     border-radius: 10px;
+}
+
+.iconH1:hover{
+    cursor: pointer;
+    box-shadow: 0 0 25px rgb(37, 56, 33);
+    transition: 300ms;
 }
 
 #titulo {
     color: rgb(253, 251, 251);
+    padding: 40px;
+    text-shadow: 5px 7px 5px rgb(37, 56, 33);
 }
+
 
 #minha_foto {
     width: 300px;
-    padding: 102px 5px 5px 5px;
+    padding: 5px;
     border-radius: 15px;
 }
 
